# robotic974-exercises-rs

./: Cargo.toml  LICENSE  README.md
crates/exercises/: Cargo.toml
crates/exercises/src/: adc.rs  chenillard.rs  chrono.rs  cowboy.rs  debounce.rs  dice.rs  lib.rs  low_pass.rs  vumetre.rs  wiper.rs
crates/uno/: Cargo.toml  README.md  crate.nix
crates/uno-helper/: Cargo.toml
crates/uno-helper/src/: lib.rs  precise_pwm.rs  timer_0.rs
crates/uno-lib/: Cargo.toml  crate.nix
crates/uno-lib/src/: lib.rs  timer_1.rs
crates/uno/.cargo/: config.toml
crates/uno/src/: main.rs
nix/modules/: devshell.nix  rust.nix
