[package]
name = "exercises"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0"
embedded-hal-02 = { version = "0.2.7", features = [
    "unproven",
], package = "embedded-hal" }
libm = "0.2.8"
ufmt = "0.2.0"
# Higher needs >= 1.79.0 for rust
fixed = "=1.27.0"
nb = "1.1.0"
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
