[package]
name = "uno-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
avr-device = "0.7"
panic-halt = "1.0.0"
embedded-hal = "1.0"
exercises = { workspace = true }
uno-lib = { workspace = true }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "286fd48dd7d27c770efcd95f21aecb0c21d4048a"
features = ["arduino-uno"]
