[package]
name = "uno"
version = "0.1.0"
authors = ["Virgile Quintin <virgile@quintin.re>"]
edition = "2021"
license = "MIT"

#[[bin]]
#name = "uno"
#test = false
#bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
# Higher needs >= 1.79.0 for rust
fixed = "=1.27.0"
exercises = { workspace = true }
uno-helper = { workspace = true }
uno-lib = { workspace = true }
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "3e362624547462928a219c40f9ea8e3a64f21e5f"
features = ["arduino-uno"]

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
[build-dependencies.proc-macro2]
version = "=1.0.79"

[dependencies.avr-device]
version = "0.5.4"
