[package]
name = "uno"
version = "0.1.0"
authors = ["Virgile Quintin <virgile@quintin.re>"]
edition = "2021"
license = "MIT"

#[[bin]]
#name = "uno"
#test = false
#bench = false

[dependencies]
avr-device = "0.7"
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
# Higher needs >= 1.79.0 for rust
fixed = "1.29.0"
exercises = { workspace = true }
uno-helper = { workspace = true }
uno-lib = { workspace = true }
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "286fd48dd7d27c770efcd95f21aecb0c21d4048a"
features = ["arduino-uno"]
